# fast_calc

./: CMakeLists.txt  README.md
document/: config_manager.md  file_manager.md  history_manager.md  localization_manager.md  manual.md  manual.txt
lang/: README.txt
lang/en/: manual.txt  ui.toml
lang/ru/: manual.txt  ui.toml
src/: AST.cpp  calc.cpp  calc.hpp  common.hpp  execute.cpp  main.cpp  token.cpp  token.hpp
src/core/: config_manager.cpp  config_manager.hpp  file_manager.cpp  file_manager.hpp  help_manager.cpp  help_manager.hpp  history_manager.cpp  history_manager.hpp  localization.cpp  localization.hpp
src/include/: AST.hpp  calc.hpp
src/ui/: calc_screen.cpp  calc_screen.hpp  history_now_screen.cpp  history_now_screen.hpp  log_screen.cpp  log_screen.hpp  main_screen.cpp  main_screen.hpp  setting_screen.hpp  text_screen.cpp  text_screen.hpp
tests/: config_manager_tests.cpp  file_manager_tests.cpp  history_manager_tests.cpp  localization_manager_tests.cpp
